--- a/classes/properties/common.properties
+++ b/classes/properties/common.properties
@@ -1,5 +1,5 @@
 AppID=wx5d351a6db0ac77f8
 AppSecret=ac9acfe1e08589575acf22223546b108
-domain=http://fcy.xinwubao.com
+domain=http://beta.xinwubao.com
 server=http://wx.xinwubao.com
 keyStr=xinwubao123!@#$%
